# ucxclient

./: .gitignore  CMakeLists.txt  CODE_REVIEW_2025-01-19.md  COMMIT_MESSAGE.txt  FTDI_IMPLEMENTATION.md  HID_REPORT_ID_FIX.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS.md  Makefile  README.md  XMODEM_RX_THREAD_FIX.md  apply_api_fixes.py  at-client.code-workspace  at_client.c  at_client.h  at_urc_dispatcher.c  at_urc_dispatcher.h  at_util.c  at_util.h  check_both_dlls.py  check_exports.py  check_wrapper.py  fix_wifi_careful.ps1  fix_wifi_spelling.ps1  fix_wifi_ucxclient.ps1  launch_gui.cmd  launch_gui.sh  launch_ucxclient-x64.cmd  launch_ucxclient-x64.cmd.bak  launch_ucxclient_win64.cmd  launch_ucxtool.cmd  launch_ucxtool_win64.cmd  launch_windows_app.cmd  main.c  project.yml  tasks.py  ucxclient.cmake  ucxclient.code-workspace  ucxclient_changes.diff  ucxclient_win64_settings.ini  (+1 more)
.github/workflows/: ceedling.yaml  examples.yaml  zephyr.yaml
build_scripts/: BUILD_LINUX_FROM_WINDOWS.md  COMPILER_WARNINGS.md  Dockerfile.build  build.sh  build_linux_docker.cmd  build_linux_docker.ps1  build_windows.bat  build_windows.cmd
cmake/: arm-none-eabi-gcc.cmake  stm32.cmake  stm32f407vg.cmake
docker/: build_stm32.sh  docker-compose.yml  test_renode.sh
docker/stm32f4/: Dockerfile  Dockerfile.renode
examples/: CMakeLists.txt  README.md  README_ucxclient-x64.md  README_ucxclient_win64.md  README_windows_app.md  example_utils.c  example_utils.h  firmware_update.c  fw_upgrade_example.c  http_example.c  http_example_no_os.c  tasks.py  ucxclient-x64.c  ucxclient-x64.c.backup  ucxclient-x64.rc  ucxclient_win64.c  ucxclient_win64.rc  ucxtool_win64.c  windows_app.c  windows_basic.c  windows_test.c  xmodem_working.c
examples/bluetooth-sig/: appearance_values.yaml  bt_appearance_values.h  bt_characteristic_uuids.h  bt_company_identifiers.h  bt_descriptor_uuids.h  bt_service_uuids.h  bt_units.h  characteristic_uuids.yaml  company_identifiers.yaml  convert_yaml_to_c.py  descriptor_uuids.yaml  service_uuids.yaml  units.yaml
examples/error_codes/: convert_yaml_to_c.py  error_codes.yaml  u_error_codes.h
examples/ftdi/: D2XX Programmer's Guide.url  FTD2XX.H  FTDI Knowledgebase.url  ftd2xx_minimal.h
examples/port/: README.md  UART_MODES.md  u_cx_at_config_windows.h  u_port.h  u_port_freertos.c  u_port_freertos.h  u_port_no_os.c  u_port_no_os.h  u_port_posix.c  u_port_posix.h  u_port_windows.c  u_port_windows.h  u_port_windows_ftdi_event.c  u_port_zephyr.c  u_port_zephyr.h
examples/port_do not use/: u_cx_at_config_windows.h  u_port.h  u_port_freertos.h  u_port_no_os.h  u_port_posix.c  u_port_posix.h  u_port_windows.c  u_port_windows.h  u_port_zephyr.h
examples/python_gui/: README.md  at_to_api_mapper.py  dll_exports.txt  dynamic_product_gui.py  extract_dll_functions.py  firmware_tab.py  launcher.py  main_window.py  mapper_tab.py  product_selector_dialog.py  requirements.txt  settings_manager.py  test_tab.py  ucx_api_executor.py  ucx_wrapper.py  yaml_loader_subprocess.py  yaml_parser.py
examples/python_gui/portenum/: port.py  win_port.py
examples/qrcodegen/: QR-Code-generator-c at master · nayuki-QR-Code-generator.url
examples/ucxclient_win64/: STATUS.md  api_commands.c  api_commands.h  bluetooth.c  bluetooth.h  com_port_detect.c  com_port_detect.h  common.h  device_connection.c  device_connection.h  extract_functions.py  firmware_update.c  firmware_update.h  gatt.c  gatt.h  http.c  http.h  main.c  mqtt.c  mqtt.h  settings.c  settings.h  socket.c  socket.h  sps.c  sps.h  ui_menus.c  ui_menus.h  urc_handlers.c  urc_handlers.h  wifi.c  wifi.h
inc/: u_cx_at_client.h  u_cx_at_config.h  u_cx_at_params.h  u_cx_at_urc_queue.h  u_cx_at_util.h  u_cx_at_xmodem.h  u_cx_log.h  u_cx_xmodem.h
ports/: README.md  u_port.h  u_port_uart.h
ports/extra/stm32/: PORT_SUMMARY.md  README.md  STM32F407VGTx_FLASH.ld  TESTING.md  build.sh  main.h  main_stm32.c  run_fw_upgrade_example.resc  run_http_example.resc  run_http_example_console.resc  stm32f407vg.resc  syscalls.c
ports/os/: README_FREERTOS.md  u_cx_at_config_windows.h  u_port_freertos.c  u_port_freertos.h  u_port_no_os.c  u_port_no_os.h  u_port_posix.c  u_port_posix.h  u_port_windows.c  u_port_windows.h  u_port_zephyr.c  u_port_zephyr.h
ports/uart/: README_STM32F4.md  u_port_uart_linux.c  u_port_uart_stm32f4.c  u_port_uart_stm32f4.h  u_port_uart_windows.c  u_port_uart_zephyr.c
scripts/: gcov.cfg  process_coverage.sh
src/: XMODEM_README.md  u_cx_at_client.c  u_cx_at_params.c  u_cx_at_urc_queue.c  u_cx_at_util.c  u_cx_at_xmodem.c  u_cx_log.c  u_cx_xmodem.c
stm32/: main_stm32.c
test/: test_u_cx_at_client.c  test_u_cx_at_client_no_urc_queue.c  test_u_cx_at_params.c  test_u_cx_at_urc_queue.c  test_u_cx_at_utils.c  u_main_test.c  u_main_ubxlib.c
test/support/: u_cx_at_test_config.h  u_port_test.h
ucx_api/: u_cx.c  u_cx.h  u_cx_bluetooth.c  u_cx_bluetooth.h  u_cx_diagnostics.c  u_cx_diagnostics.h  u_cx_error_codes.c  u_cx_firmware_update.c  u_cx_firmware_update.h  u_cx_gatt_client.c  u_cx_gatt_client.h  u_cx_gatt_server.c  u_cx_gatt_server.h  u_cx_general.c  u_cx_general.h  u_cx_http.c  u_cx_http.h  u_cx_mqtt.c  u_cx_mqtt.h  u_cx_network_time.c  u_cx_network_time.h  u_cx_power.c  u_cx_power.h  u_cx_security.c  u_cx_security.h  u_cx_socket.c  u_cx_socket.h  u_cx_sps.c  u_cx_sps.h  u_cx_system.c  u_cx_system.h  u_cx_types.h  u_cx_urc.c  u_cx_urc.h  u_cx_wifi.c  u_cx_wifi.h
windows_gui/: .gitignore  README.md  dll_exports.txt  dynamic_product_gui.py  firmware_tab.py  launcher.py  main_window.py  mapper_tab.py  ucx_api_executor.py  ucx_wrapper.py
windows_gui/portenum/: __init__.py  linux_port_enum.py  win_port_enum.py
zephyr/: CMakeLists.txt  Kconfig  README.md  ci-dummy-west.yml  module.yaml
zephyr/http_example/: CMakeLists.txt  prj.conf  sample.yaml  west.yml
zephyr/port_test/: CMakeLists.txt  prj.conf  testcase.yaml
zephyr/port_test/boards/: qemu_x86.overlay
zephyr/port_test/src/: main.c
